--- a/src/App.css
+++ b/src/App.css
@@ -53,8 +53,8 @@ h4 {
 .avatar {
   border-radius: 50%;
   background-color: white;
-  height: 40em;
-  width: 40em;
+  height: 50vh;
+  width: 27vw;
   margin-right: 50px;
 }
 p {
@@ -91,21 +91,21 @@ p {
 .screen {
   position: absolute;
   height: 30vw;
-  width: 20vw;
+  width: 23vw;
   left: 2vw;
   border-radius: 10px;
 }
 .card {
   position: relative;
   width: 600px;
-  height: 600px;
+  height: 28vw;
   border-radius: 20px;
   display: flex;
   align-items: center;
   transition: 0.5s;
   left: 5vw;
   margin-right: 50px;
-  background: #FEF7F9;
+ 
 }
 
 .card:hover {
@@ -118,7 +118,7 @@ p {
 .card .circle {
   position: absolute;
   top: 0;
-  left: 15vh;
+  left: 22vh;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -192,7 +192,7 @@ p {
   margin-top: 10vh;
 }
 h2 {
-  margin-top: 35vh;
+  margin-top: 30vh;
   font-size: 3em;
   border-bottom: 3px solid #E93D82;
 }
