--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,20 @@
 h1{
   color: white;
   font-size: 5vw;
+  margin-left: 10%;
+  font-style: normal;
+  letter-spacing: 0.171em;
+  line-height: 0.6;
  
 }
-h4 {
+.wrapper h4 {
   font-size: 3vw;
   color: #E93D82;
+  margin-left: 10%;
+  font-style: italic;
+  font-weight: 400;
+  letter-spacing: 0.302em;
+  line-height: 22px;
 }
 .title{
   display: flex;
@@ -55,7 +64,7 @@ h4 {
   background-color: white;
   height: 50vh;
   width: 27vw;
-  margin-right: 50px;
+  margin-right: 10vw;
 }
 p {
   color: white;
@@ -64,7 +73,7 @@ p {
 .link {
 
   display: flex;
-  /*padding-left: 10vw;*/
+ justify-content: center;
 }
 .icone {
   height: 4vw;
@@ -80,12 +89,12 @@ p {
 
 .project {
  
-  background-color: #FEF7F9;
+  background-color: #fdf4f6;
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  height: 160vh;
+  
 }
 
 .screen {
@@ -113,12 +122,12 @@ p {
 
 }
 .card:not(:hover) {
-  transition: 2s ease; 
+  transition: 1s ease; 
 }
 .card .circle {
   position: absolute;
   top: 0;
-  left: 22vh;
+  left: 23%;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -153,9 +162,13 @@ p {
   opacity: 1;
   visibility: visible;
 }
+.card .content h4 {
+  font-size: 3vw;
+}
+
 .card .content a {
   position: relative;
-  color:white;
+  color:#FEDCE7;
   padding: 10px 20px;
   border-radius: 10px;
   background: white;
@@ -192,7 +205,6 @@ p {
   margin-top: 10vh;
 }
 h2 {
-  margin-top: 30vh;
   font-size: 3em;
   border-bottom: 3px solid #E93D82;
 }
@@ -202,9 +214,9 @@ h2 {
   margin-top: 10vh;
   height: 100px;
   background: #E93D82;
-  color: #FEF7F9;
+  color: #FEDCE7;
 }
 #contact p {
-  color: #FEF7F9;
+  color: #211F26 ;
   font-size: 2em;
 }
