--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@
 .contenair {
   display: flex;
   justify-content: space-around;
+  height: 100vh;
  
 }
 h1{
@@ -62,8 +63,8 @@ h1{
 .avatar {
   border-radius: 50%;
   background-color: white;
-  height: 50vh;
-  width: 27vw;
+  height: 25em;
+  width: 40em;
   margin-right: 10vw;
 }
 p {
@@ -127,7 +128,7 @@ p {
 .card .circle {
   position: absolute;
   top: 0;
-  left: 23%;
+  left: 13%;
   width: 100%;
   height: 100%;
   overflow: hidden;
