--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
   display:flex;
   flex-direction: column;
   height: 100vh;
-  padding-top: 2em;
   justify-content: space-around;
   background-color:  #211F26 ;
 }
@@ -41,7 +40,6 @@
   font-size: 4vw;
   margin-left: 10%;
   font-style: normal;
-  letter-spacing: 0.171em;
   line-height: 0.6;
  
 }
@@ -65,16 +63,16 @@
   background-color: white;
 width: 100%;
 height: 100%;
-max-width: 400px;
-  max-height: 450px;
+max-width: 300px;
+  max-height: 330px;
   margin-right: 10vw;
   margin-top: 5%;
   object-fit: cover;
   object-position: center;
 }
-.wrapper p {
+.wrapper .content p {
   color: white;
-  font-size: 2vw;
+  font-size: 1.3em;
 }
 .link {
 
