--- a/src/App.css
+++ b/src/App.css
@@ -246,6 +246,7 @@ h2 {
 @media screen and (max-width: 900px) {
   .wrapper {
     padding-top: 0;
+    margin-top: 20px;
   }
   .nav {
     height: 10vh;
