--- a/src/App.css
+++ b/src/App.css
@@ -224,6 +224,7 @@
 }
 
 h2 {
+  color:black;
   font-size: 3em;
   border-bottom: 3px solid #E93D82;
 }
@@ -246,9 +247,10 @@ h2 {
 @media screen and (max-width: 900px) {
   .wrapper {
     padding-top: 0;
-    margin-top: 20px;
+    
   }
   .nav {
+    margin-top: 50px;
     height: 10vh;
   }
   .nav a {
