--- a/src/App.css
+++ b/src/App.css
@@ -247,10 +247,10 @@ h2 {
 @media screen and (max-width: 900px) {
   .wrapper {
     padding-top: 0;
-    
+    height: auto;    
   }
   .nav {
-    margin-top: 50px;
+    margin-top: 200px;
     height: 10vh;
   }
   .nav a {
