--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   height: 100vh;
   justify-content: space-around;
   background-color:  #211F26 ;
+  position: relative;
 }
 
 .nav {
@@ -94,7 +95,7 @@
 .wrapper .blob {
   position: absolute;
   /* padding-top: 0vh; */
-  top: 90vh;
+ bottom: 0;
   width: 100%;
   height: 70vh;
 }
@@ -250,6 +251,7 @@ h2 {
     height: auto;
     display: flex;
     flex-direction: column;
+    position: relative;
    
   }
 
@@ -288,7 +290,8 @@ h2 {
 
    }
    .wrapper .blob {
-    top: 115vh;
+  position: absolute;
+  bottom: 0;
    }
    .card {
     height: 85vw;
