--- a/src/App.css
+++ b/src/App.css
@@ -311,12 +311,16 @@ h2 {
     display: flex;
     flex-wrap: wrap;
    }
+   .card .content {
+    margin-top: 20px;
+   }
    .card .content h4 {
     font-size: 1.7em;
    }
    .card .content p {
     font-size: 1.3em;
     color: white;
+    margin: 15px;
    }
   #contact {
     display: flex;
@@ -374,11 +378,12 @@ h2 {
 
    }
    .wrapper .blob {
-  position: absolute;
-  bottom: 0;
+    position: absolute;
+    bottom: 0;
    }
    .card {
     height: 45vw;
+    margin-bottom: 20px;
    }
    .card .circle {
     top: 2vh;
@@ -386,8 +391,8 @@ h2 {
    }
    .card .screen{
     margin-left: 50px;
-    height: 60vw;
-    width: 57vw;
+    height: 50vw;
+    width: 45vw;
    }
    .list {
     display: flex;
