--- a/src/App.css
+++ b/src/App.css
@@ -314,6 +314,9 @@ h2 {
    .card .content {
     margin-top: 20px;
    }
+   .card .content a {
+    margin-top: -10px;
+   }
    .card .content h4 {
     font-size: 1.7em;
    }
@@ -340,7 +343,7 @@ h2 {
     display: flex;
     flex-direction: column;
     position: relative;
-   
+    margin-top: -10px;   
   }
 
   .nav {
@@ -398,6 +401,9 @@ h2 {
     display: flex;
     flex-wrap: wrap;
    }
+   .card .content a {
+    margin-top: -10px;
+   }
    .card .content h4 {
     font-size: 1.7em;
    }
@@ -406,6 +412,7 @@ h2 {
     color: white;
     padding: 10px;
     margin: 18px;
+    margin-top: -10px;
    }
   #contact {
     display: flex;
