--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,7 @@
   font-weight: 400;
   letter-spacing: 0.302em;
   line-height: 22px;
+  margin: 5px 0 0 15%;
 }
 
 .title{
@@ -84,10 +85,12 @@
 
 .link {
   display: flex;
- justify-content: center;
+  justify-content: center;
+  gap: 20px;
+  margin: 50px;
 }
+.icone{
 
-.icone {
   height: 4vw;
  padding-left: 2vw;
 }
