--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@
   height: 100vh;
 }
 
+
 .wrapper .contenair .title h1{
   color: white;
   font-size: 4vw;
@@ -88,8 +89,17 @@
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin: 35px;
+  margin-top: 35px;
+  margin-bottom: 30px;
 }
+.contenair .title .link a {
+  position: relative;
+  height: 100px;
+  width: 100px;
+}
+.link .icone {
+  height:70px;
+ }
 
 .wrapper .blob {
   position: absolute;
