--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@
   letter-spacing: 0.302em;
   line-height: 22px;
   margin: 5px 0 0 15%;
-}
+ }
 
 .title{
   display: flex;
@@ -86,18 +86,16 @@
 }
 
 .link {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 35px;
-  margin-bottom: 30px;
-}
+  margin-left: 20%;
+ }
+
 .contenair .title .link a {
   position: relative;
   height: 100px;
   width: 100px;
 }
 .link .icone {
+  padding: 20px;
   height:70px;
  }
 
