--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 .wrapper {
   display:flex;
   flex-direction: column;
-  height: 100vh;
+
   justify-content: space-around;
   background-color:  #211F26 ;
   position: relative;
@@ -49,6 +49,7 @@
   line-height: 0.6;
 }
 
+
 .wrapper h4 {
   font-size: 3vw;
   color: #E93D82;
@@ -84,7 +85,9 @@
   color: white;
   font-size: 1.4em;
 }
-
+.blanc {
+  height: 50px;
+}
 .link {
   display: flex;
     margin-left: 20%;
