--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
 
 .contenair {
   display: flex;
-  height: 100%;
+  height: 85%;
 }
 
 
@@ -63,6 +63,7 @@
   display: flex;
   flex-direction: column;
   padding-left: 5vw;
+  justify-content: space-between;
 
 }
 
@@ -88,9 +89,10 @@
 }
 .link {
   display: flex;
-    margin-left: 20%;
-    height: 20%;
-    align-items: center;
+  margin-left: 15%;
+  position: absolute;
+  z-index: 10;
+  top: 35vh;
  }
 
 .contenair .title .link a {
