--- a/src/App.css
+++ b/src/App.css
@@ -301,9 +301,12 @@ h2 {
     align-items: center;
     height: auto;
    }
+   .contenair .title .link {
+    height: auto;
+    width: auto;
+   }
    .link .icone {
     height: 8vw;
-
    }
    .wrapper .blob {
   position: absolute;
@@ -391,6 +394,9 @@ h2 {
     justify-content: center;
     align-items: center;
     height: auto;
+   }
+   .link {
+    top:40vh;
    }
    .link .icone {
     height: 8vw;
