--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
 #root {
   margin: 0 auto;
   padding: 0;
+  width: 100vw;
 }
 
 .wrapper {
@@ -266,6 +267,9 @@ h2 {
   line-height: 50px;
 }
 @media screen and (max-width: 900px) {
+  #root {
+    width: auto;
+  }
   .wrapper {
     padding-top: 0;
     height: auto;
@@ -370,6 +374,9 @@ h2 {
   }
 }
 @media screen and (max-width: 900px) and  (orientation: landscape) {
+  #root {
+    width: auto;
+  }
   .wrapper {
     padding-top: 0;
     height: auto;
